--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
 
     <application
         android:name=".BookManagerApplication"
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -24,7 +23,7 @@
         </activity>
         <activity android:name=".addbook.AddNewBookActivity" />
         <activity android:name=".checkoutbook.BookDetailActivity" />
-        <activity android:name=".updateBook.UpdateBookActivity"></activity>
+        <activity android:name=".updateBook.UpdateBookActivity"/>
     </application>
 
 </manifest>
